<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/sneakership_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sneakersship"
        android:textStyle="bold"
        android:textSize="@dimen/_22ssp"
        android:textColor="@color/orange"
        android:fontFamily="serif"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        />


    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/search_your_favourites"
        android:padding="10dp"
        android:inputType="text"
        android:background="@drawable/orange_border_bg"
        android:drawableStart="@drawable/search_icon"
        android:imeOptions="actionSearch"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sneakership_tv"
        />

    <TextView
        android:id="@+id/popular_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        android:layout_marginStart="18dp"
        android:textStyle="bold"
        android:fontFamily="serif"
        />

    <Spinner
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:background="@null"
        android:gravity="end"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:clipToPadding="false"
        android:padding="@dimen/_10sdp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/popular_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/sneaker_item"
        tools:itemCount="10"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:spanCount="2" />

    <TextView
        android:id="@+id/no_results_found_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results_found"
        android:textColor="@color/orange"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popular_tv"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>